# backend-TODO

./: .pre-commit-config.yaml  README.md  pyproject.toml
infrastructure/: .env.example  docker-compose.yml
infrastructure/nginx/: Dockerfile  nginx.conf
infrastructure/postgres/: init-db.sh
infrastructure/zookeeper/: Dockerfile
services/TODO-core/: .env.example  Dockerfile  manage.py  pyproject.toml  pytest.ini  tasks.py
services/TODO-core/api/: urls.py
services/TODO-core/api/projects/: urls.py
services/TODO-core/api/tasks/: urls.py
services/TODO-core/apps/project/: admin.py  models.py  paginators.py  serializers.py  views.py
services/TODO-core/apps/project/tests/: conftest.py  test_models.py
services/TODO-core/apps/tasks/: models.py  serializers.py  views.py
services/TODO-core/core/: authentication.py  middleware.py  models.py  permissions.py
services/TODO-core/settings/: celery.py  settings.py
services/analytics/: .env.example  Dockerfile  celerybeat-schedule  celeryconfig.py  database.py  kafka_consumer_runner.py  main.py  pyproject.toml  tasks.py
services/authentication/: .env.example  Dockerfile  kafka_utils.py  main.py  migration_check.py  pyproject.toml  schedule_tasks.py  tasks.py
services/authentication/app/: auth.py  main.py  queries.py  schemas.py
services/authentication/app/models/: models.py
services/authentication/auth/: dependencies.py  enums.py  queries.py  schemas.py
services/authentication/auth/models/: models.py
services/authentication/auth/routers/: admin.py  auth.py  internal.py
services/authentication/core/: .env.example  database.py
services/authentication/migrations/: env.py
services/authentication/migrations/versions/: 1426ffc31beb_initial_auth_tables.py  5cccfef037bf_initial_test_alembic.py
services/authentication/tests/: conftest.py
services/files/: .env.example  README.md  alembic.ini  authentication.py  database.py  kafka_utils.py  main.py  models.py  pyproject.toml  s3_utils.py
services/files/migrations/: env.py  script.py.mako
services/files/migrations/versions/: cf83a8c12307_create_file_metadata_table.py
