[project]
name = "todo-core"
version = "0.1.0"
description = ""
authors = [
    {name = "ilia",email = "iliaforwork1993@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "djangorestframework (>=3.16.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
